# Backend/internal/routes/order_routes.go
@@ -19,5 +19,6 @@ func SetupOrderRoutes(router *gin.RouterGroup, service services.OrderService) {
 		orders.GET("/by-customer", handlers.GetOrdersByCustomerEmail(service))
 		orders.GET("/by-status", handlers.GetOrdersByStatus(service))
 		orders.GET("/by-payment-status", handlers.GetOrdersByPaymentStatus(service))
+		orders.PUT("/:id/status", handlers.UpdateOrderStatus(service))
 	}
 }
